User Signup & Signin Complete

--- a/account_app/templates/account_app/profile.html
+++ b/account_app/templates/account_app/profile.html
@@ -1,19 +1,19 @@
 {% extends 'base.html' %}
 {% block title %}{{ user.full_name }}'s Profile{% endblock title %}
-
 {% block content %}
 <div class="container rounded bg-dark mt-5 mb-5">
     <div class="row">
         <div class="col-md-5 border-right">
             <div class="d-flex flex-column align-items-center text-center p-3 py-5">
-                <img class="rounded-circle mt-5" width="250px" height="250px" src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg">
+                <img class="rounded-circle mt-5" width="250px" height="250px" src="{{ user.profile_image.url }}">
                 <span class="font-weight-bold">
                 {{user.full_name}}
                 </span>
                 <span class="text-white-50">{{user.email}}</span>
         </div>
         </div>
-        <div class="col-md-5 border-right">
+        <form class="col-md-5 border-right" action="." method="post" enctype="multipart/form-data">
+            {% csrf_token %}
             <div class="p-3 py-5">
                 <div class="d-flex justify-content-between align-items-center mb-3">
                     <h4 class="text-right">{{user.full_name}}'s Profile</h4>
@@ -21,20 +21,28 @@
                 <div class="row mt-3">
                     <div class="col-md-12">
                         <label class="labels">Full Name</label>
-                        <input type="text" class="form-control" placeholder="e.g. Jhone Doe" value="{{user.full_name}}">
+                        {{form.full_name}}
+                        {{form.full_name.errors}}
                     </div>
                     <div class="col-md-12">
                         <label class="labels">Email</label>
-                        <input type="text" class="form-control" placeholder="e.g. user@gmail.com" value="{{user.email}}">
+                        {{form.email}}
+                        {{ form.email.errors }}
                     </div>
                     <div class="col-md-12">
                         <label class="labels">Mobile Phone</label>
-                        <input type="text" class="form-control" value="{{user.phone}}" placeholder="Mobile Phone">
+                        {{form.phone}}
+                        {{ form.phone.errors }}
+                    </div>
+                    <div class="col-md-12 mt-2">
+                            <label class="labels">Profile Picture</label>
+                            {{form.profile_image}}
+                        {{ form.profile_image.errors }}
                     </div>
                 </div>
-               
-                <div class="mt-5 text-center"><button class="btn btn-primary profile-button" type="button">Save Profile</button></div>
+                <div class="mt-5 text-center"><button class="btn btn-primary profile-button" type="submit">Save Profile</button></div>
             </div>
+        </form>
         </div>
     </div>
 
