--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,21 +1,40 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+{% url 'user_auth_app:profile_view' request.user.pk as path_to_profile_view %}
+{% url 'user_auth_app:signin_view' as path_to_signin_view %}
+{% url 'user_auth_app:signup_view' as path_to_signup_view %}
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary justify-content-between">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/">Auth App</a>
+      <a class="navbar-brand" href="{% url 'user_auth_app:signin_view' %}">Auth App</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
   
       <div class="collapse navbar-collapse" id="navbarColor01">
         <ul class="navbar-nav me-auto">
+        {% if request.user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link active" href="#">Home
-              <span class="visually-hidden">(current)</span>
+            <a class="nav-link {% if request.path == path_to_profile_view %} active {% endif %}" href="{% url 'user_auth_app:profile_view' request.user.pk %}">Profile
             </a>
           </li>
+          <li><a class="nav-link  {% if request.path == path_to_profile_view %} active {% endif %}" href="{% url 'user_auth_app:logout_view' %}">Logout</a></li>
+          {% else %}
           <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link {% if request.path == path_to_signup_view %} active {% endif %}" href="{% url 'user_auth_app:signup_view' %}">Signup</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link {% if request.path == path_to_signin_view %} active {% endif %}" href="{% url 'user_auth_app:signin_view' %}">Login</a>
+          </li>
+          {% endif %}
         </ul>
       </div>
     </div>
+
+   
+    {% if request.user.is_authenticated %}
+    <a class="nav-link active" href="{% url 'user_auth_app:profile_view' request.user.pk %}">
+      <img src="{{ request.user.profile_image.url }}" width="50px" height="50px" alt="">
+    </a>
+    {% endif %}
+
+    <div class="mx-5 navbar-image"></div>
   </nav>
